# browser-switch

./: .gitignore  Cargo.toml  README.md
src/: app.rs  auto_switch.rs  browser.rs  config.rs  main.rs  url_pattern.rs
