[package]
name = "browser-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["image", "lazy"] }
indexmap = { version = "2.2.5", features = ["serde"] }
once_cell = "1.19.0"
parse-display = "0.9.0"
regex = "1.10.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"
